# tutorial

./: __init__.py  analytics.db  business.db  cart.db  chats.db  orders.db  products.db  pyproject.toml  users.db  users_SQL
classes/: analytics.py  business.py  cart.py  chatConvo.py  order.py  product.py  user.py
templates/: accessDenied.html  base.html  businessMenu.html  cart.html  error404.html  error429.html  error500.html  home.html  profile.html  viewItem.html
templates/businessDashboard/: addProduct.html  businessDashboard.html  businessRegistration.html  editBusiness.html  editProduct.html  viewOrder.html
templates/chats/: chatConvo.html  chats.html
templates/includes/: _errorAlert.html  _loginModal.html  _navbar.html  _registerModal.html
templates/orders/: orderDetails.html  orders.html
