[tool.poetry]
name = "app-dev-proj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
WTForms = "^3.0.0"
email-validator = "^1.1.3"
bleach = "^4.1.0"
passlib = "^1.7.4"
SQLAlchemy = "^1.4.37"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
